remove useless file

--- a/app/src/main/res/drawable/ic_location.xml
+++ b/app/src/main/res/drawable/ic_location.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
+    android:width="20dp"
+    android:height="20dp"
     android:viewportWidth="1024"
     android:viewportHeight="1024">
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/textColor"
       android:pathData="M792.26,269.18c-102.66,-140.22 -274.88,-134.85 -279.94,-134.4C511.23,134.72 509.25,134.72 506.37,134.72c-29.38,0 -180.93,6.53 -274.5,134.53 -49.34,67.39 -82.82,186.11 37.44,369.28 29.5,45.12 144.64,195.78 158.59,213.5 12.1,15.74 42.11,54.98 42.18,54.98 6.78,10.37 21.82,22.4 41.92,22.4 20.22,0 35.26,-12.1 41.02,-20.86 0,-0.13 30.66,-40.38 43.07,-56.38 7.94,-10.11 127.68,-166.4 158.59,-213.63C874.94,455.3 841.47,336.58 792.26,269.18zM512,568.06c-71.49,0 -129.66,-58.11 -129.66,-129.73 0,-71.49 58.18,-129.73 129.66,-129.6 71.55,0 129.73,58.11 129.73,129.6C641.73,509.95 583.55,568.06 512,568.06z"/>
 </vector>
