--- a/app/src/main/res/layout/activity_todo_edit.xml
+++ b/app/src/main/res/layout/activity_todo_edit.xml
@@ -109,10 +109,30 @@
                         android:paddingHorizontal="15dp"
                         android:text="@string/tips_remind_by_time" />
 
-                    <View
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="0.6dp"
-                        android:background="#ddd" />
+                        android:layout_height="wrap_content"
+                        android:background="#f0f0f0"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="15dp"
+                            android:text="Remind time: " />
+
+                        <TextView
+                            android:id="@+id/mTvRemindTime"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:hint="not set"
+                            android:minHeight="50dp"
+                            android:paddingHorizontal="15dp"
+                            android:paddingVertical="10dp" />
+                    </LinearLayout>
+
 
                     <TextView
                         android:id="@+id/mTvRemindByLocation"
