--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/mRootLayout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     android:gravity="center"
@@ -30,6 +30,7 @@
         android:layout_marginVertical="100dp"
         android:alpha="0"
         android:background="@drawable/bg_white_round"
+        android:onClick="next"
         android:text="TODO >"
         android:textColor="@color/colorPrimary"
         android:visibility="gone"
